package ru.itmo.backend.dto;

import lombok.Builder;
import lombok.Data;

@Data
@Builder
public class CleanupResponseDto {
    private Integer cleared;
}